move logo to left side on desktop, needs to be adjusted for mobile responsiveness as it overlaps the ham menu

--- a/src/components/PageHeader/PageHeader.css
+++ b/src/components/PageHeader/PageHeader.css
@@ -13,7 +13,10 @@
     font-size: x-large;    
 }
 
-div.#nav-items > div:first-child {
-    justify-content: flex-start, !important;
-    color:black, !important;
+#nav-logo {
+    margin-right: auto;
 }
+
+/* #nav-logo {
+    position: absolute;
+} */
