code cleanup, deleted unused folders, reformatted all routes too look the same in app.js

--- a/src/components/Snippet/Snippet.css
+++ b/src/components/Snippet/Snippet.css
@@ -1,6 +1,9 @@
+/* these main font family designations are leaking to the splash page styles */
+
 main {
     color: #ADB5BD;
-    font-family: monospace !important;
+    font-family: monospace;
+    /* !important; this is overwriting all main sections in app with this font */ 
 }
 
 main h1, main h2 {
