--- a/src/components/Snippet/Snippet.css
+++ b/src/components/Snippet/Snippet.css
@@ -1,5 +1,10 @@
 /* these main font family designations are leaking to the splash page styles */
 
+#test-top {
+    border-top: black, !important;
+    border-top-width: 5px, !important;
+}
+
 main {
     color: #ADB5BD;
     font-family: monospace;
@@ -46,4 +51,9 @@ main h2 {
     text-align: left;
     font-size: 16px;
     font-weight: bold;
+    color: gray;
 }
+
+/* li {
+    list-style: none, !important;
+} */
